Fix leaderboard-username line-height wrapping

--- a/DevilDaggersWebsite.Razor/wwwroot/styles/leaderboard.css
+++ b/DevilDaggersWebsite.Razor/wwwroot/styles/leaderboard.css
@@ -24,7 +24,7 @@
 
 .leaderboard-username {
 	max-width: 224px;
-	max-height: 1.42857143em;
+	max-height: 1.15em;
 	overflow: hidden;
 }
 
